[tool.poetry]
name = "pandelytics"
version = "0.1.0"
description = "Scraper Library for retrieving pandemic information"
authors = [
    "Mmadu Manasseh <mmadumanasseh@gmail.com>",
    "Diretnan Domnan <diretnandomnan@gmail.com>",

]
license="Apache"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.23.0"
beautifulsoup4 = "4.8.2"
pandas = "1.0.3"
lxml = "^4.5.0"

[tool.poetry.scripts]
pandelytics = "app:main"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
